# nobrakes-dev

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  readthedocs.yml
.github/: CODEOWNERS
.github/actions/set-up-python-env/: action.yml
.github/actions/update-badge/: action.yml
.github/workflows/: build.yml  ci.yml  deploy-docs.yml  docs.yml  lint.yml  pre-build-ci.yml  test.yml  typecheck.yml  update_python_badge.yml
docs/: api-reference.md  index.md  page-reference.md  usage.md
nobrakes/: __init__.py  _accumulator.py  _constants.py  _models.py  _pgelements.py  _pgmodel.py  _typing.py  exceptions.py
nobrakes/_api/: __init__.py  pgelements.py  pgmodel.py  typing.py
nobrakes/_element_utils/: string.py  table.py  xpath.py
nobrakes/_scraper/: __init__.py  helpers.py  table_browser.py
nobrakes/_scraper/pgfetch/: __init__.py  attendance.py  events.py  home.py  results.py  rider_averages.py  scorecard.py  squad.py  standings.py  teams.py
nobrakes/_session/: base.py  utils.py
nobrakes/_session/adapters/: aiohttp.py  httpx.py
nobrakes/client/: __init__.py  _base.py  _utils.py
nobrakes/client/_support/: __init__.py  aiohttp.py  httpx.py
nobrakes/pgdata/: __init__.py  _pgdata.py
nobrakes/pgelements/: __init__.py  _pgelements.py
nobrakes/pgmodel/: __init__.py  _pgmodel.py
nobrakes/session/: __init__.py  _base.py
nobrakes/session/_concrete_adapters/: __init__.py  aiohttp.py  httpx.py
nobrakes/typing/: __init__.py  _typing.py
requirements/: covreport.txt  lint.txt  test.txt  typecheck.txt
scripts/: __init__.py  _utils.py  covreport.py  format.py  lint.py  test.py  typecheck.py  update_coverage_badge.py  update_python_badge.py
tests/: conftest.py  test_accumulator.py  test_api.py  test_element_utils.py  test_init.py  test_models.py  test_pgmodel.py
tests/data/markup/: attendance_2012.html  events_2012_pg1.html  events_2012_pg2.html  results_2012.html  rider_averages_2012.html  scorecard_pir_ham_2012.html  squad_vet_2012.html  standings_2012.html  teams_2012.html
tests/data/pgfetch_output/: attendance_2012.json  events_2012.json  home_2011_2025_t1.json  home_2011_2025_t2.json  scorecard_pir_ham_2012.json  squad_vet_2012.json  standings_2012.json  teams_2012.json
tests/data/pgmodel_output/: attendance_2012.json  attendance_2012.yml  events_2012.yml  rider_averages_2012.json  rider_averages_2012.yml  scorecard_pir_ham_2012.json  scorecard_pir_ham_2012.yml  squad_vet_2012.yml  standings_2012.json  standings_2012.yml  teams_2012.yml
tests/data/pgmodel_output copy/: events_2012.json  rider_averages_2012.json  squad_vet_2012.json
tests/scraper/: test_helpers.py  test_pgfetch.py  test_scraper.py  test_table_browser.py
tests/session/: test_adapters.py  test_base.py  test_utils.py
tests/testdata/markup/: events_2012_pg2.html  home_2025.html  rider_averages_2012.html  squad_vet_2012.html  teams_2012.html
tests/testdata/pgfetch_output/: results_2012.json  rider_averages_2012.json
tests/testdata/pgmodel_output/: squad_vet_2012.json  teams_2012.json
