[build-system]
requires = ["hatchling >= 1.27", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nobrakes"
dynamic = ["version"]
description = "A high-level user API for asynchronous fetching, parsing, and transforming Swedish speedway data sourced from SVEMO."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "BSD-3-Clause"
authors = [{ name = "Jesper Johansson", email = "jesperpjohansson@gmail.com" }]
keywords = ["speedway", "svemo", "scraping", "async", "lxml", "typed"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = [
  "lxml>=5.3.0",
  "lxml-stubs>=0.2.0",
]

[project.urls]
Documentation = "https://nobrakes.readthedocs.io/"
Repository = "https://github.com/jesperpjohansson/nobrakes-dev"
Issues = "https://github.com/jesperpjohansson/nobrakes-dev/issues"

[project.optional-dependencies]
aiohttp = ["aiohttp>=3.9.0"]
httpx = ["httpx>=0.23.1"]
dev = [
  "aiohttp",
  "httpx",
  "lxml-stubs",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
]
test = ["pytest", "pytest-asyncio", "pytest-cov", "aiohttp", "httpx"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["nobrakes"]

[tool.ruff]
target-version = "py312"
output-format = "pylint"
include = ["pyproject.toml", "nobrakes/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN002",  # missing-type-args
  "ANN003",  # missing-type-kwargs
  "COM812",  # missing-trailing-comma
  "D203",    # incorrect-blank-line-before-class
  "D212",    # multi-line-summary-first-line
  "PLR0913", # too-many-arguments
  "S311",    # suspicious-non-cryptographic-random-usage
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN",     # flake8-annotations
  "D",       # pydocstyle
  "BLE001",  # blind-except
  "C901",    # complex-structure
  "PLR2004", # magic-value-comparison
  "S101",    # assert
  "SLF001",  # private-member-access
  "TRY002",  # raise-vanilla-class
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
files = ["nobrakes/**/*.py"]
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.coverage.run]
source = ["nobrakes"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = ["if TYPE_CHECKING:"]
